[project]
name = "idox"
version = "1.4.0"
description = "IDOR file downloader using HTTP request files."
authors = [{ name = "skelmis", email = "skelmis.craft@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "orjson>=3.10.10,<4",
    "skelmis-commons>=1.4.0,<2",
    "httpx>=0.27.2,<0.28",
    "typer>=0.12.5,<0.13",
]

[project.urls]
"Issue tracker" = "https://github.com/Skelmis/idox/issues"
Homepage = "https://github.com/Skelmis/idox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3,<9"]
